Shift up tutorial content to prevent getting cut off at bottom

--- a/css/tutorial.css
+++ b/css/tutorial.css
@@ -185,7 +185,7 @@
 }
 
 #hebbiaDiv1{
-    top: 105px;
+    top: 50px;
 }
 
 .shortcut {
